# SportTrackingApp

./: .coveragerc  .env.test  README.md  pyproject.toml
.github/workflows/: run_tests.yml
app/app/: __app_configs.py  settings.py  urls.py  views.py
app/calculator/: __calc_config.py  __exceptions.py  urls.py  views.py
app/calculator/models/: operation.py
app/calculator/service/: operations.py
app/calculator/templates/calculator/: calculate.html  enter_numbers.html
app/calculator/tests/services/: tests_operations.py
app/calculator/tests/views/: test_calculate.py
app/calculator/views/: add.py  calculate.py  health.py
src/app/: __app_configs.py  settings.py  urls.py
src/app/tests/: test_health.py  test_validation_enum.py
src/app/views/: health.py
src/calculator/: __calc_config.py  __exceptions.py  urls.py
src/calculator/templates/calculator/: calculate.html  enter_numbers.html  invalid_operation.html
src/calculator/views/: calculate.py
src/tennis/: __tennis_config.py  admin.py  apps.py  urls.py
src/tennis/forms/: player.py
src/tennis/migrations/: 0001_initial.py
src/tennis/models/: player.py
src/tennis/serializers/: player.py
src/tennis/services/: add_player.py
src/tennis/templates/tennis/: add_player.html  error.html  success.html
src/tennis/views/: add_player.py  find_player.py
