[project]
name = "SportTrackingApp"
version = "0.1.0"
description = "The Django App to track sports results"
authors = [
    {name = "Lukasz Chmielewski", email = "lukchm94@gmail.com"},
]
dependencies = [
    "django>=5.0.6",
]
requires-python = ">=3.11"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"


[tool.pdm]
distribution = true


[tool.isort]
profile = "black"


[tool.black]
line-length = 88
target-version = ['py38', 'py39', 'py310', 'py311']


[tool.pdm.dev-dependencies]
dev = [
    "black>=24.4.2",
    "isort>=5.13.2",
]

[tool.pdm.scripts]
prod = 'pdm run python app/manage.py runserver'
migrate = 'pdm run python app/manage.py migrate'