[project]
name = "SportTrackingApp"
version = "0.1.0"
description = "The Django App to track sports results"
authors = [
    {name = "Lukasz Chmielewski", email = "lukchm94@gmail.com"},
]
dependencies = [
    "django>=5.0.6",
]
requires-python = ">=3.11"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"


[tool.pdm]
distribution = true


[tool.isort]
profile = "black"


[tool.black]
line-length = 88
target-version = ['py38', 'py39', 'py310', 'py311']


[tool.pdm.dev-dependencies]
dev = [
    "black>=24.4.2",
    "isort>=5.13.2",
    "sqlalchemy>=2.0.0",
    "mysql-connector-python>=4.0.0",
    "pymysql>=1.1.0",
    "black>=22.8.0",
    "pydantic>=2.0.0",
    "pymysql>=1.1.1",
    "coverage>=7.5.3"
]

[tool.pdm.scripts]
prod = 'pdm run python app/manage.py runserver'
migrate = 'pdm run python app/manage.py migrate'
make_migration = 'pdm run python app/manage.py makemigrations'
test_calculator = "pdm run coverage run --source='.' app/manage.py test calculator"
tests = "pdm run coverage run --source='.' app/manage.py test"
coverage_report = 'pdm run coverage report'
check_code_format = 'black --check app/'
format_code = 'black app/'