[project]
name = "SportTrackingApp"
version = "0.1.0"
description = "The Django App to track sports results"
authors = [
    {name = "Lukasz Chmielewski", email = "lukchm94@gmail.com"},
]
dependencies = [
    "django>=5.0.6",
]
requires-python = ">=3.11"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"


[tool.pdm]
distribution = true


[tool.isort]
profile = "black"


[tool.black]
line-length = 88
target-version = ['py38', 'py39', 'py310', 'py311']


[tool.pdm.dev-dependencies]
dev = [
    "black>=24.4.2",
    "isort>=5.13.2",
    "sqlalchemy>=2.0.0",
    "mysql-connector-python>=4.0.0",
    "pymysql>=1.1.0",
    "black>=22.8.0",
    "pydantic>=2.0.0",
    "pymysql>=1.1.1",
    "coverage>=7.5.3",
    "python-dotenv>=1.0.0",
    "drf-yasg>=1.21.7",
    "setuptools>=70.0.0"
]

[tool.pdm.scripts]
prod = 'pdm run python src/manage.py runserver'

migrate = 'pdm run python src/manage.py migrate'
make_migration = 'pdm run python src/manage.py makemigrations'

check_code_format = 'black --check src/'
format_code = 'black src/'

test_app = "pdm run coverage run --source='.' src/manage.py test app"
test_calculator = "pdm run coverage run --source='.' src/manage.py test calculator"
test_tennis = "pdm run coverage run --source='.' src/manage.py test tennis"

coverage_report = 'pdm run coverage report'